# omega-lang

./: .env.example  .gitattributes  .gitignore  00_NEXT_STEPS_NAVIGATION_HUB.md  00_START_HERE.md  AGENT_SESSION_3_SUMMARY.md  ANALISIS_KEKURANGAN_MENDALAM.md  ANSWER_ANALISA_PIHAK_KE_3.md  ANSWER_OMEGA_PRODUCTION_STATUS.md  AUDIT_NATIVE_PRODUCTION_READINESS_2025.md  AUDIT_OMEGA_LAPORAN_FINAL_ID.md  AUDIT_PIHAK_KETIGA_RINGKASAN_ID.md  AUDIT_RECOMMENDATIONS_ACTION_ITEMS.md  AUDIT_REPORTS_INDEX.md  AUDIT_SUMMARY_OMEGA_FINAL.md  AUDIT_VERIFICATION_FINAL_REPORT.md  AUDIT_VERIFICATION_RESPONSE.md  AUDIT_VERIFIKASI_KOMPILER_OMEGA_NATIVE_PRODUCTION.md  BLOCKCHAIN_TARGETS_RESTORATION_REPORT.md  BOOTSTRAP_SOURCE_DOCUMENTATION.md  BUILD_CHAIN_COMPLETE.md  CHALLENGE_ANALYSIS_AND_ACTION_PLAN.md  CHANGELOG.md  CHANGELOG_v1.1.0.md  CHANGELOG_v1.2.0.md  CHANGELOG_v1.3.0.md  COMMUNITY_ANNOUNCEMENT_v1.2.0.md  COMPETITIVE_STRATEGY.md  COMPILER_ARCHITECTURE.md  COMPLETE_COMPILER_SUMMARY.md  COMPLETION_REPORT.md  CONTINUATION_ROADMAP.md  CONTRIBUTING.md  CROSS_PLATFORM_TEST_RESULTS.md  Cargo.toml  DECISION_AND_NEXT_STEPS.md  DELIVERY_COMPLETE.md  DELIVERY_SUMMARY.md  DEPENDENCY_UPDATE_REPORT.md  DEPLOYMENT_GUIDE.md  (+216 more)
.github/: projects.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/releases/: v1.3.0.md
.github/workflows/: auto-tag.yml  brew-audit-test.yml  build-linux.yml  build-macos.yml  ci.yml  omega-test.yml  project-automation.yml  publish-packages.yml  release.yml  sync-wiki.yml
.trae/: extension.json  file-associations.json  icon-theme.json  settings.json  workspace.json
artifacts/range_transform_ext/: range_transform_ext.rs  range_transform_ext.sol
benchmark_tests/: simple.go  simple.omega  simple.omegair  simple.rs  simple.sol
benchmarking/: enhanced_benchmark_suite.mega  enhanced_benchmark_suite.ps1
benchmarks/performance/: BENCHMARK_RESULTS.md  benchmark_suite.mega
bootstrap/: bootstrap_chain.mega  omega_minimal.c
ci/: pipeline.yml
contracts/: SimpleToken.mega
deploy-package/: .htaccess  404.html  DEPLOYMENT.md  blog.html  docs.html  forum.html  index.html  lang.js  nginx.conf  omega-nginx.conf  performance.js  playground.html  roadmap.html  robots.txt  script.js  security.html  service-worker.js  setup-server.sh  sitemap.xml  styles.css  sw.js  test_links.py
deploy-package/docs/: best-practices.html  examples.html  getting-started.html  language-spec.html
deployment/: README.md
docs/: API_DOCUMENTATION.md  CI_VERSIONING.md  DEVELOPER_GUIDE.md  MIGRATION_GUIDE.md  README.md  api-reference.md  best-practices.md  changes_summary.md  compiler-architecture.md  cross-chain-api.md  development_progress_report.md  evm-codegen-data-location.md  getting-started.md  language-specification.md  memory_testing_system.md  platform-support.md  production.md  production_wrapper.md  project_management_summary.md  system_update_documentation.md  task8_production_documentation.md
examples/: CrossChainBridge.mega  http_server.mega  omega_api_server.mega  simple_token.omega
ide-plugins/: IDE_ICON_SETUP.md  MARKETPLACE_SUBMISSION_GUIDE.md  build_all_plugins.ps1  build_all_plugins.sh  publish_all_plugins.ps1  publish_all_plugins.sh  test_all_plugins.sh
install/: install-omega.ps1
kubernetes/: deployment.yaml
logging/: Dockerfile  fluent.conf
lsp-server/: omega-language-server.js  package.json
monitoring/: prometheus.yml
omega-vscode-extension/: CHANGELOG_FIX.md  LICENSE  README.md  language-configuration.json  omega-vscode-1.0.0.vsix  omega-vscode-1.0.1.vsix  package-lock.json  package.json
scripts/: automated_testing_pipeline.ps1  basic_test.ps1  code_quality_audit.ps1  compile_smoke.ps1  comprehensive_audit_report.ps1  comprehensive_test.ps1  compute_ci_version.ps1  dependency_audit.ps1  documentation_audit.ps1  generate_coverage.ps1  http_e2e_tests.ps1  init-db.sql  omega_native_runner.ps1  performance_benchmark.ps1  performance_benchmark.sh  pre_deployment_check.sh  quick_benchmark.ps1  run_build_production.ps1  security_scan.sh  send_requests.ps1  simple_benchmark.ps1  simple_code_audit.ps1  simple_comprehensive_report.ps1  simple_dependency_audit.ps1  simple_test.ps1  stop_omega_runner.ps1  test_runner.js  validation.js
server/: deploy_api.sh  fix_version.sh  omega-api.service  test_compile.json  test_full_contract.json  test_vulnerable.json  update_nginx_api.sh
src/: main.mega  main.rs  self_hosting_compiler.mega  target_code_generator.mega
test/: integration_tests.mega  lexer_tests.mega  optimizer_tests.mega  parser_tests.mega  semantic_tests.mega
test-reports/: actual-test-results.json  final-report.html  performance-benchmarks.json  test-results.html
test_results/: comprehensive_test_20251031_102739.json
tests/: NATIVE_COMPONENT_TESTS.ps1  PRODUCTION_TESTS.bat  README_adapter.md  WEEK_1_EXECUTION_ANALYSIS.md  WEEK_1_TESTING_QUICK_START.md  WEEK_1_TESTING_REPORT.md  WEEK_1_TEST_RESULTS.txt  actual_test_cases.mega  codegen_tests.mega  comprehensive_coverage_tests.mega  http_core_tests.mega  http_server_e2e.mega  integration_tests.mega  integration_tests.omegair  ir_tests.mega  ir_tests.omegair  lexer_tests.mega  modular_integration_tests.mega  modular_integration_tests.omegair  native_codegen_syscall_tests.mega  native_codegen_syscall_tests.omegair  out_go.go  out_go.omegair  out_solana.omegair  out_solana.rs  out_temp.omegair  out_temp.sol  parser_tests.mega  path_tests.mega  path_tests.omegair  performance_benchmarks.mega  run_all_tests.mega  run_http_core_tests.mega  run_http_core_tests.omegair  run_modular_tests.mega  run_modular_tests.omegair  run_omega_tests.go  run_omega_tests.omega  run_omega_tests.omegair  run_omega_tests.rs  (+8 more)
tools/: production_readiness.ps1  quick_production_check.ps1
tree-sitter-omega/: grammar.js  package.json
validation_output/: validation_report.html  validation_results.json
wiki/: API-Reference.md  Compiler-Architecture.md  Contributing.md  Examples.md  Getting-Started-Guide.md  Home.md  Language-Specification.md  Roadmap.md  _Sidebar.md
(+349 files in other folders)
