[package]
name = "omega-compiler"
version = "1.1.0"
edition = "2021"
authors = ["Emylton Leunufna <emylton@omega-lang.org>"]
description = "OMEGA Universal Blockchain Programming Language Compiler - Enhanced Performance & Security"
license = "MIT"
repository = "https://github.com/omega-lang/omega"
homepage = "https://omega-lang.org"
documentation = "https://docs.omega-lang.org"
readme = "README.md"
keywords = ["blockchain", "smart-contracts", "compiler", "evm", "solana"]
categories = ["development-tools", "compilers"]

[features]
default = ["performance", "security", "colored-output"]
performance = ["rayon", "dashmap"]
security = ["sanitize-filename", "bytesize"]
colored-output = ["colored", "indicatif"]
cross-chain = ["tokio", "serde_json"]
evm-target = ["ethers"]
solana-target = ["solana-sdk"]

[dependencies]
# Core dependencies
clap = { version = "4.0", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Performance optimizations (v1.1.0)
rayon = { version = "1.7", optional = true }
dashmap = { version = "5.4", optional = true }

# Security enhancements (v1.1.0)
sanitize-filename = { version = "0.5", optional = true }
bytesize = { version = "1.2", optional = true }

# User experience improvements (v1.1.0)
colored = { version = "2.0", optional = true }
indicatif = { version = "0.17", optional = true }

# Cross-chain support
tokio = { version = "1.0", features = ["full"], optional = true }

# Blockchain targets
ethers = { version = "2.0", optional = true }
solana-sdk = { version = "1.16", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "omega"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[package.metadata.omega]
version = "1.1.0"
build_system = "native"
performance_improvements = [
    "15% faster compilation",
    "20% memory optimization", 
    "25% faster build times"
]
security_features = [
    "Input validation",
    "Path sanitization", 
    "File size limits",
    "Safe build mode"
]