[package]
name = "omega-compiler"
version = "1.1.0"
edition = "2021"
authors = ["Emylton Leunufna <emylton@omega-lang.org>"]
description = "OMEGA Universal Blockchain Programming Language Compiler - Enhanced Performance & Security"
license = "MIT"
repository = "https://github.com/omega-lang/omega"
homepage = "https://omega-lang.org"
documentation = "https://docs.omega-lang.org"
readme = "README.md"
keywords = ["blockchain", "smart-contracts", "compiler", "evm", "solana"]
categories = ["development-tools", "compilers"]

[features]
default = ["performance", "security", "user-experience", "serde_json"]
performance = ["rayon", "dashmap", "criterion"]
security = ["sanitize-filename"]
user-experience = ["colored", "indicatif"]
cross-chain = ["serde_json"]
evm-target = ["ethers"]
solana-target = ["solana-sdk"]

[dependencies]
# Core dependencies
clap = { version = "4.0", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
anyhow = "1.0"

# Performance optimizations
rayon = { version = "1.8", optional = true }
dashmap = { version = "5.5", optional = true }
criterion = { version = "0.5", optional = true }

# Security enhancements
sanitize-filename = { version = "0.5", optional = true }
bytesize = { version = "1.3", optional = true }

# User experience improvements
colored = { version = "2.1", optional = true }
indicatif = { version = "0.17", optional = true }

# Cross-chain support
tokio = { version = "1.0", features = ["full"], optional = true }

# Blockchain targets - Re-enabled with zeroize conflict fix
ethers = { version = "2.0.14", optional = true }
solana-sdk = { version = "1.17", optional = true }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "omega"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[package.metadata.omega]
version = "1.1.0"
build_system = "native"
performance_improvements = [
    "15% faster compilation",
    "20% memory optimization", 
    "25% faster build times"
]
security_features = [
    "Input validation",
    "Path sanitization", 
    "File size limits",
    "Safe build mode"
]

# Patch untuk mengatasi konflik zeroize dengan curve25519-dalek
# Menggunakan fork Solana Labs yang menghapus constraint zeroize
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }