[package]
name = "omega"
version = "1.2.2"
edition = "2021"
authors = ["OMEGA Language Team <team@omega-lang.org>"]
description = "Universal Blockchain Programming Language Compiler"
license = "MIT"
repository = "https://github.com/omega-lang/omega"
homepage = "https://omega-lang.org"
keywords = ["blockchain", "compiler", "smart-contracts", "evm", "solana"]
categories = ["compilers", "cryptography::cryptocurrencies"]

[dependencies]
# Core dependencies
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Parsing and AST
regex = "1.10"
once_cell = "1.19"
indexmap = "2.1"

# File system and I/O
walkdir = "2.4"
tempfile = "3.8"

# Cryptography (for blockchain operations)
sha3 = "0.10"
hex = "0.4"

# Web3 and blockchain
web3 = { version = "0.19", optional = true }
earc = { version = "0.10", optional = true }
earc-derive = { version = "0.10", optional = true }

# Solana support
solana-sdk = { version = "1.17", optional = true }
solana-program = { version = "1.17", optional = true }
anchor-lang = { version = "0.30", optional = true }
anchor-spl = { version = "0.30", optional = true }

# EVM support
evergreen-evm = { version = "0.1", optional = true }
ethereum-types = { version = "0.14", optional = true }

# Substrate support
frame-support = { version = "4.0", optional = true }
sp-std = { version = "8.0", optional = true }

# Near support
near-sdk = { version = "4.1", optional = true }

# Development dependencies
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[features]
default = ["evm", "solana"]

# Blockchain targets
evm = ["web3", "ethereum-types", "arc", "arc-derive"]
solana = ["solana-sdk", "solana-program", "anchor-lang", "anchor-spl"]
substrate = ["frame-support", "sp-std"]
near = ["near-sdk"]

# All targets
all-targets = ["evm", "solana", "substrate", "near"]

# Development features
dev = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true

[[bin]]
name = "omega"
path = "src/main.rs"

[lib]
name = "omega"
path = "src/lib.rs"

[workspace]
members = [
    "tree-sitter-omega",
    "omega-vscode-extension",
]

# Package metadata for crates.io
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]